--- a/hidden_button.html
+++ b/hidden_button.html
@@ -9,18 +9,38 @@
             font-family: Arial, sans-serif;
             text-align: center;
             margin-top: 50px;
+            position: relative;
+            height: 100vh;
+            overflow: hidden;
         }
         .hidden-button {
-            display: none;
-        }
-        .hidden-button:active {
-            display: block;
+            position: absolute;
+            width: 50px; /* Маленький размер */
+            height: 50px;
+            opacity: 0; /* Полностью прозрачная */
+            cursor: pointer; /* Курсор меняется при наведении */
         }
     </style>
 </head>
 <body>
     <h1>Добро пожаловать на сайт!</h1>
     <p>Попробуй найти скрытую кнопку...</p>
-    <button class="hidden-button" onclick="window.location.href='next_page.html'">Скрытая кнопка</button>
+    <p>Она где-то здесь, но её не видно! 😉</p>
+
+    <!-- Скрытая кнопка -->
+    <button class="hidden-button" onclick="window.location.href='next_page.html'"></button>
+
+    <script>
+        // Размещаем кнопку в случайном месте
+        const button = document.querySelector('.hidden-button');
+        const maxX = window.innerWidth - button.offsetWidth;
+        const maxY = window.innerHeight - button.offsetHeight;
+
+        const randomX = Math.floor(Math.random() * maxX);
+        const randomY = Math.floor(Math.random() * maxY);
+
+        button.style.left = `${randomX}px`;
+        button.style.top = `${randomY}px`;
+    </script>
 </body>
 </html>
