--- a/hidden_button.html
+++ b/hidden_button.html
@@ -15,8 +15,8 @@
         }
         .hidden-button {
             position: absolute;
-            width: 50px; /* Маленький размер */
-            height: 50px;
+            width: 500px; /* Увеличенный размер */
+            height: 500px;
             opacity: 0; /* Полностью прозрачная */
             cursor: pointer; /* Курсор меняется при наведении */
         }
