--- a/next_page.html
+++ b/next_page.html
@@ -7,14 +7,31 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            color: #333;
             text-align: center;
-            margin-top: 50px;
+            padding: 50px;
+        }
+        .hidden-command {
+            color: #f0f0f0; /* Цвет текста совпадает с фоном */
+            user-select: none; /* Запрещаем выделение текста */
+        }
+        .hidden-command::selection {
+            background-color: #333; /* Цвет выделения текста */
+            color: #f0f0f0; /* Цвет текста при выделении */
+        }
+        .message {
+            font-size: 1.5em;
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
-    <h1>Поздравляем!</h1>
-    <p>Ты нашёл скрытую кнопку! 🎉</p>
-    <p>Теперь ты можешь перейти к следующему заданию.</p>
+    <div class="message">
+        <h1>Поздравляем! 🎉</h1>
+        <p>Ты почти у цели! Ты нашёл скрытую кнопку и успешно прошёл все задания.</p>
+        <p>Чтобы завершить квест, отправь боту команду <span class="hidden-command">/finish</span>.</p>
+        <p>Подсказка: выдели текст на этой странице, чтобы найти команду.</p>
+    </div>
 </body>
 </html>
