--- a/find_ip.html
+++ b/find_ip.html
@@ -20,20 +20,34 @@
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
         }
-        .hidden-ip {
-            font-size: 5px;
-            color: #888888;
-            text-align: left;
-            margin-top: 20px;
+        .hidden-text {
+            font-size: 8px;
+            color: #666666;
+            text-align: center;
+            margin: 10px 0;
+        }
+        .image {
+            width: 100%;
+            max-width: 500px;
+            border-radius: 10px;
+            margin-top: 15px;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Анонимное сообщение</h1>
-        <p>"В нашей компании произошла утечка данных. Кто-то спрятал зашифрованный файл на одном из наших серверов. Найди IP-адрес сервера, чтобы начать расследование."</p>
+        <p>"В нашей компании произошла утечка данных. Кто-то спрятал зашифрованный файл на одном из наших серверов. Найди его местоположение, чтобы начать расследование."</p>
+
+        <img class="image" src="https://images.unsplash.com/photo-1551288049-bebda4e38f71" alt="Хакерский код">
+        
         <p>Где-то здесь скрыта важная информация...</p>
-        <p class="hidden-ip">IP-адрес: 95.52.96.86</p>
+
+        <p class="hidden-text">95.52.96.86</p>
+
+        <img class="image" src="https://images.unsplash.com/photo-1605902711622-cfb43c4437a5" alt="Засекреченный сервер">
+        
+        <p>Будь внимателен(ьна). Только лучший сможет разгадать эту загадку.</p>
     </div>
 </body>
 </html>
