--- a/find_ip.html
+++ b/find_ip.html
@@ -23,8 +23,8 @@
         .hidden-text {
             font-size: 8px;
             color: #666666;
-            text-align: center;
-            margin: 10px 0;
+            margin: 0;
+            display: inline;
         }
         .image {
             width: 100%;
@@ -41,13 +41,11 @@
 
         <img class="image" src="https://images.unsplash.com/photo-1551288049-bebda4e38f71" alt="Хакерский код">
         
-        <p>Где-то здесь скрыта важная информация...</p>
+        <p>Где-то здесь скрыта важная информация. Может быть, ты сможешь найти её среди мелких деталей, если будешь достаточно внимателен(ьна). <span class="hidden-text">95.52.96.86</span> Есть ли у тебя нужная зацепка?</p>
 
-        <p class="hidden-text">95.52.96.86</p>
-
-        <img class="image" src="https://images.unsplash.com/photo-1605902711622-cfb43c4437a5" alt="Засекреченный сервер">
+        <img class="image" src="https://images.unsplash.com/photo-1571171637578-55c3a7cdb1d4" alt="Секретные файлы">
         
-        <p>Будь внимателен(ьна). Только лучший сможет разгадать эту загадку.</p>
+        <p>Будь внимателен(ьна), и ты найдешь, что скрывает этот сервер.</p>
     </div>
 </body>
 </html>
