--- a/find_ip.html
+++ b/find_ip.html
@@ -21,10 +21,11 @@
             box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
         }
         .hidden-text {
-            font-size: 8px;
+            font-size: 10px;
             color: #666666;
-            margin: 0;
-            display: inline;
+            text-align: center;
+            margin-top: 15px;
+            display: block;
         }
         .image {
             width: 100%;
@@ -41,11 +42,16 @@
 
         <img class="image" src="https://images.unsplash.com/photo-1551288049-bebda4e38f71" alt="Хакерский код">
         
-        <p>Где-то здесь скрыта важная информация. Может быть, ты сможешь найти её среди мелких деталей, если будешь достаточно внимателен(ьна). <span class="hidden-text">95.52.96.86</span> Есть ли у тебя нужная зацепка?</p>
+        <p>Где-то здесь скрыта важная информация. Может быть, ты сможешь найти её среди мелких деталей, если будешь достаточно внимателен(ьна).</p>
+
+        <!-- Скрытый блок с IP -->
+        <div class="hidden-text">95.52.96.86</div>
+
+        <p>Ты чувствуешь, что это важно, но нужно найти ещё больше улик!</p>
 
         <img class="image" src="https://images.unsplash.com/photo-1571171637578-55c3a7cdb1d4" alt="Секретные файлы">
         
-        <p>Будь внимателен(ьна), и ты найдешь, что скрывает этот сервер.</p>
+        <p>Теперь пора идти к следующему шагу, ты на верном пути!</p>
     </div>
 </body>
 </html>
