--- a/find_ip.html
+++ b/find_ip.html
@@ -20,12 +20,11 @@
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
         }
-        .hidden-text {
-            font-size: 10px;
-            color: #666666;
-            text-align: center;
-            margin-top: 15px;
-            display: block;
+        .hidden-ip {
+            font-size: 5px;
+            color: #444444;
+            letter-spacing: -1px;
+            display: inline;
         }
         .image {
             width: 100%;
@@ -44,13 +43,8 @@
         
         <p>Где-то здесь скрыта важная информация. Может быть, ты сможешь найти её среди мелких деталей, если будешь достаточно внимателен(ьна).</p>
 
-        <!-- Скрытый блок с IP -->
-        <div class="hidden-text">95.52.96.86</div>
+        <p>Внимание, твой шанс — разгадать, что спрятано за всеми этими строками! <span class="hidden-ip">95.52.96.86</span> Ты близок к разгадке, но нужно ещё больше внимания.</p>
 
-        <p>Ты чувствуешь, что это важно, но нужно найти ещё больше улик!</p>
-
-        <img class="image" src="https://images.unsplash.com/photo-1571171637578-55c3a7cdb1d4" alt="Секретные файлы">
-        
         <p>Теперь пора идти к следующему шагу, ты на верном пути!</p>
     </div>
 </body>
