--- a/pages/find_ip.html
+++ b/pages/find_ip.html
@@ -8,17 +8,25 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin-top: 50px;
-            position: relative;
+            margin: 0;
+            padding: 20px;
             height: 100vh;
             overflow: hidden;
             background-color: white; /* Фиксированный белый фон */
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        h1, p {
+            max-width: 90%;
+            font-size: clamp(16px, 4vw, 24px); /* Адаптивный размер текста */
         }
         .hidden-button {
             position: absolute;
-            width: 100px; /* Уменьшенный размер */
-            height: 100px;
-            opacity: 0; /* Полностью прозрачная */
+            width: 200px;
+            height: 200px;
+            opacity: 0;
             cursor: pointer;
         }
     </style>
@@ -28,20 +36,25 @@
     <p>Попробуй найти скрытую кнопку...</p>
     <p>Она где-то здесь, но её не видно! 😉</p>
 
-    <!-- Скрытая кнопка -->
     <button class="hidden-button" onclick="window.location.href='next_page.html'"></button>
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const button = document.querySelector('.hidden-button');
-            const maxX = window.innerWidth - button.offsetWidth;
-            const maxY = window.innerHeight - button.offsetHeight;
+            
+            function positionButton() {
+                const maxX = window.innerWidth - button.offsetWidth;
+                const maxY = window.innerHeight - button.offsetHeight;
 
-            const randomX = Math.floor(Math.random() * maxX);
-            const randomY = Math.floor(Math.random() * maxY);
+                const randomX = Math.floor(Math.random() * maxX);
+                const randomY = Math.floor(Math.random() * maxY);
 
-            button.style.left = `${randomX}px`;
-            button.style.top = `${randomY}px`;
+                button.style.left = `${randomX}px`;
+                button.style.top = `${randomY}px`;
+            }
+
+            positionButton();
+            window.addEventListener("resize", positionButton); // Пересчет при изменении экрана
         });
     </script>
 </body>
