--- a/pages/next_page.html
+++ b/pages/next_page.html
@@ -30,8 +30,8 @@
     <div class="message">
         <h1>Поздравляем! 🎉</h1>
         <p>Ты почти у цели! Ты нашёл скрытую кнопку и успешно прошёл все задания.</p>
-        <p>Чтобы завершить квест, отправь боту команду <span class="hidden-command">/finish</span>.</p>
-        <p>Подсказка: выдели текст на этой странице, чтобы найти команду</p>
+        <p>Чтобы завершить квест, отправь боту команду <span class="hidden-command">/finish</span></p>
+        <p>Подсказка: выдели текст на этой странице, чтобы найти команду.</p>
     </div>
 </body>
 </html>
