--- a/pages/find_ip.html
+++ b/pages/find_ip.html
@@ -3,60 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Найди скрытую кнопку</title>
+    <title>Утечка данных</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin: 0;
+            margin: 50px;
+            background-color: #121212;
+            color: #ffffff;
+        }
+        .container {
+            max-width: 600px;
+            margin: auto;
             padding: 20px;
-            height: 100vh;
-            overflow: hidden;
-            background-color: white; /* Белый фон всегда */
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            background: #1e1e1e;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
         }
-        h1, p {
-            max-width: 90%;
-            font-size: clamp(18px, 5vw, 28px); /* Читаемый текст на мобильных */
-            margin: 10px;
+        .hidden-ip {
+            font-size: 5px;
+            color: #444444;
+            letter-spacing: -1px;
+            display: inline;
         }
-        .hidden-button {
-            position: fixed;
-            width: 350px;
-            height: 350px;
-            opacity: 0;
-            cursor: pointer;
+        .image {
+            width: 100%;
+            max-width: 500px;
+            border-radius: 10px;
+            margin-top: 15px;
         }
     </style>
 </head>
 <body>
-    <h1>Добро пожаловать на сайт!</h1>
-    <p>Попробуй найти скрытую кнопку...</p>
-    <p>Она где-то здесь, но её не видно! 😉</p>
+    <div class="container">
+        <h1>Анонимное сообщение</h1>
+        <p>В нашей компании произошла утечка данных. Кто-то спрятал IP на одном из наших серверов. Найди его на странице, чтобы начать расследование.</p>
 
-    <button class="hidden-button" onclick="window.location.href='next_page.html'"></button>
+        <img class="image" src="https://images.unsplash.com/photo-1551288049-bebda4e38f71" alt="Хакерский код">
+        
+        <p>Где-то здесь скрыта важная информация. Может быть, ты сможешь найти её среди мелких деталей, если будешь достаточно внимателен(ьна).</p>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const button = document.querySelector('.hidden-button');
+        <p>Внимание, твой шанс — разгадать, что спрятано за всеми этими строками! <span class="hidden-ip">95.52.96.86</span> Ты близок к разгадке, но нужно ещё больше внимания.</p>
 
-            function positionButton() {
-                const maxX = window.innerWidth - button.offsetWidth;
-                const maxY = window.innerHeight - button.offsetHeight;
-
-                const randomX = Math.max(0, Math.floor(Math.random() * maxX));
-                const randomY = Math.max(0, Math.floor(Math.random() * maxY));
-
-                button.style.left = `${randomX}px`;
-                button.style.top = `${randomY}px`;
-            }
-
-            positionButton();
-            window.addEventListener("resize", positionButton);
-        });
-    </script>
+        <p>Теперь пора идти к следующему шагу, ты на верном пути!</p>
+    </div>
 </body>
 </html>
