--- a/find_ip.html
+++ b/find_ip.html
@@ -37,7 +37,7 @@
 <body>
     <div class="container">
         <h1>Анонимное сообщение</h1>
-        <p>"В нашей компании произошла утечка данных. Кто-то спрятал зашифрованный файл на одном из наших серверов. Найди его местоположение, чтобы начать расследование."</p>
+        <p>В нашей компании произошла утечка данных. Кто-то спрятал IP на одном из наших серверов. Найди его на странице, чтобы начать расследование.</p>
 
         <img class="image" src="https://images.unsplash.com/photo-1551288049-bebda4e38f71" alt="Хакерский код">
         
