--- a/hidden_button.html
+++ b/hidden_button.html
@@ -44,27 +44,28 @@
     function openLink() {
       const url = 'https://t.me/innoprog_quest_bot?start=finish';
       if (window.Telegram && Telegram.WebApp && typeof Telegram.WebApp.openTelegramLink === 'function') {
-        Telegram.WebApp.openTelegramLink(url);
-        Telegram.WebApp.close();
+        window.Telegram.WebAp.openTelegramLink(url);
+        window.Telegram.WebApp.close();
       } else {
         window.location.href = url;
       }
     }
 
     document.addEventListener("DOMContentLoaded", () => {
+      window.Telegram.WebApp.requestFullscreen();
       const button = document.querySelector('.hidden-button');
-  
+
       function positionButton() {
         const maxX = window.innerWidth - button.offsetWidth;
         const maxY = window.innerHeight - button.offsetHeight;
-  
+
         const randomX = Math.floor(Math.random() * maxX);
         const randomY = Math.floor(Math.random() * maxY);
-  
+
         button.style.left = randomX + 'px';
         button.style.top = randomY + 'px';
       }
-  
+
       positionButton();
       window.addEventListener("resize", positionButton);
     });
